tests/src/frontend/syntax/invalid/lvalue_in_binary_left.sk
fun main(): String {
  x.!y + b
}
